--- a/main/public/index.html
+++ b/main/public/index.html
@@ -7,8 +7,8 @@
 	<div>
 		<h1>Wikipedia viewer</h1>
 		<div>
-			<input id="search" placeholder="Search in Wiki..." />
-			<ul id="search suggestions"></ul>
+			<input id="search" placeholder="Search in Wiki..." /> <button id="clean">clean</button> <br/>
+			<ul id="suggestions-list"></ul>
 		</div>
 		<div id="results"></div>
 	</div>
